--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -185,15 +185,15 @@ a{
         <div class="scrollBar fl">
             <div class="scrollBarItem">
                 <ul>
-                    <li class="active" id="active"><a href="/index" class="color">今日推荐</a></li>
-                    <li><a href="/lastcrazy">最后疯抢</a></li>
-                    <li><a href="">美妆</a></li>
-                    <li><a href="">母婴</a></li>
-                    <li><a href="">国际</a></li>
-                    <li><a href="/homeapp">家电</a></li>
-                    <li><a href="">家居</a></li>
-                    <li><a href="/life">生活</a></li>
-                    <li><a href="">唯品奢</a></li>
+                    <li id="active"><a href="/index" class="color">今日推荐</a></li>
+                    <li ><a href="/lastcrazy">最后疯抢</a></li>
+                    <li ><a href="">美妆</a></li>
+                    <li ><a href="">母婴</a></li>
+                    <li ><a href="">国际</a></li>
+                    <li ><a href="/homeapp">家电</a></li>
+                    <li ><a href="">家居</a></li>
+                    <li ><a href="/life">生活</a></li>
+                    <li ><a href="/vipcostly">唯品奢</a></li>
                 </ul>
             </div>
         </div>
@@ -322,73 +322,6 @@ a{
             window.scrollTo(0,0)
         }
 
-        // 点击导航栏变颜色
-        
-        var li = document.querySelectorAll('li')
-        var num =0;
-        for(var l=0;l<li.length;l++){
-            li[l].index=l
-            li[l].onclick=function(){
-                li[l].classList.add('active')
-                li[this.index].classlist.remove("active")
-                num=this.index
-            }
-        }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        // // 接收两个参数  第一个参数为 点击的元素列表，第二个参数为对应改变的元素列表
-        // function Tab(btns){
-        //     this.btns = btns
-        //     // this.contents = contents
-        //     this.num = 0
-        //     var _this = this 
-        //     for (var i=0;i<this.btns.length;i++){
-        //         (function(index){
-        //             // 此时this指向为 window   所以需要提前存储this
-        //             _this.btns[index].onclick = function(){
-        //                // 此时的this 指向  点击的按钮
-        //                _this.tab(this,index)
-        //             }
-        //         })(i)
-        //     }
-        // }
-        // Tab.prototype.tab = function(_this,index){
-        //     // 此时的this指向构造对象
-        //     this.btns[this.num].classList.remove('active')
-        //     // this.contents[this.num].classList.remove('active')
-        //     // this.contents[index].classList.add('active')
-        //     _this.classList.add('active')
-        //     this.num = index
-        // }
-        // new Tab(document.querySelectorAll('li'))
-
-
-        // 构造函数内部的this   指向的是    对象
-
-        // 匿名函数内部的this   指向的  window
-
-        // 事件调用函数内部的this   指向的是    调用事件的DOM
-        
-        // 原型里面的this   指向的是    对象
+       
 
 </script>
