修改生活界面

--- a/third-stage/views/life.ejs
+++ b/third-stage/views/life.ejs
@@ -1,5 +1,7 @@
 <% include base/head.ejs%>
-<% include base/nav.ejs%>
+<!-- 导航 -->
+<% include base/navlife.ejs%>
+
 <link rel="stylesheet" href="/stylesheets/life/life.css">
     <script src="/javascripts/quadro/jquery.js"></script>
     <script src="/javascripts/quadro/swiper/swiper.js"></script>
