--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -187,11 +187,11 @@ a{
                 <ul>
                     <li id="active"><a href="/shop/index" class="color">今日推荐</a></li>
                     <li ><a href="/shop/lastcrazy">最后疯抢</a></li>
-                    <li ><a href="">美妆</a></li>
-                    <li ><a href="">母婴</a></li>
-                    <li ><a href="">国际</a></li>
+                    <li ><a href="/shop/newbeauty">美妆</a></li>
+                    <li ><a href="/shop/baby">母婴</a></li>
+                    <li ><a href="/shop/international">国际</a></li>
                     <li ><a href="/shop/homeapp">家电</a></li>
-                    <li ><a href="">家居</a></li>
+                    <li ><a href="/shop/furniture">家居</a></li>
                     <li ><a href="/shop/life">生活</a></li>
                     <li ><a href="/shop/vipcostly">唯品奢</a></li>
                 </ul>
