--- a/third-stage/views/base/navhomeapp.ejs
+++ b/third-stage/views/base/navhomeapp.ejs
@@ -184,11 +184,11 @@ a{
                 <ul>
                     <li ><a href="/shop/index" >今日推荐</a></li>
                     <li ><a href="/shop/lastcrazy">最后疯抢</a></li>
-                    <li ><a href="">美妆</a></li>
-                    <li ><a href="">母婴</a></li>
-                    <li ><a href="">国际</a></li>
+                    <li ><a href="/shop/newbeauty">美妆</a></li>
+                    <li ><a href="/shop/baby">母婴</a></li>
+                    <li ><a href="/shop/international">国际</a></li>
                     <li id="active"><a href="/shop/homeapp" class="color">家电</a></li>
-                    <li ><a href="">家居</a></li>
+                    <li ><a href="/shop/furniture">家居</a></li>
                     <li ><a href="/shop/life">生活</a></li>
                     <li ><a href="/shop/vipcostly">唯品奢</a></li>
                 </ul>
