修改views/homeapp.ejs

--- a/third-stage/views/homeapp.ejs
+++ b/third-stage/views/homeapp.ejs
@@ -1,6 +1,6 @@
 <% include base/head.ejs %>
 <!-- 导航 -->
-<% include base/nav-homeapp.ejs %>
+<% include base/navhomeapp.ejs %>
 
 <!-- homeapp 家电页面 -->
 <link rel="stylesheet" href="/stylesheets/homeapp/homeapp.css">
