--- a/third-stage/public/stylesheets/lastcrazy/lastcrazy.css
+++ b/third-stage/public/stylesheets/lastcrazy/lastcrazy.css
@@ -221,7 +221,7 @@
     /* height: 1.2rem; */
     width: 35%;
     left: 32%;
-    top: 9rem;
+    top: 55%;
     border: white 1px solid;
     color: white;
     position: absolute;
@@ -232,7 +232,7 @@
 .kaiqiang{
     position: absolute;
     width: 55%;
-    top: 12rem;
+    top: 75%;
     text-align: center;
     left: 20%;
     line-height: 22px;
@@ -241,7 +241,6 @@
     text-align: center;
     font-size: 12px;
     color: white
-    
 }
 #time{
     padding: 0 0.2rem;
