--- a/third-stage/public/stylesheets/lastcrazy/classify.css
+++ b/third-stage/public/stylesheets/lastcrazy/classify.css
@@ -9,7 +9,7 @@ body{
 
 /* top部分全部 */
 .top{
-    height: 2.5rem;
+    height:4rem;
     width: 100%;
     background: white;
     padding: 0 1rem;
@@ -19,7 +19,7 @@ body{
     margin-top: 0;
 }
 .top>div{
-    line-height: 2.5rem;
+    line-height: 4rem;
     font-size: 26px;
     float: left;
 }
@@ -36,11 +36,11 @@ body{
     box-sizing: border-box;
     font-size: 20px;
     color: #585c64;
-    line-height: 1.5rem;
+    line-height: 2rem;
     float: left;
     text-align: center;
     font-size: 16px;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 }
 .tc1{
     border-radius: 0.5rem 0 0 0.5rem;
@@ -63,14 +63,14 @@ body{
 .search{
     width: 100%;
     background: #f3f4f5;
-    padding: 0 1rem;
+    padding: 0 1.5rem;
     box-sizing: border-box;
 }
 .search>button{
     width: 100%;
-    height: 2rem;
+    /* height: 2rem; */
     text-align: center;
-    margin: 0.5rem 0;
+    margin: 1rem 0;
     border:#d8d8d8 1px solid;
     box-sizing: border-box;
     outline: none;
@@ -82,7 +82,9 @@ body{
 .content{
     width: 100%;
     box-sizing: border-box;
-    display: block;
+    /* display: block; */
+    display: none;
+
 }
 .content-list{
     width: 25%;
@@ -94,7 +96,7 @@ body{
     text-align: center;
     color: #585c64;
     font-size: 14px;
-    line-height: 3rem;
+    line-height:4rem;
     position: relative;
 }
 .content-list>li:hover{
@@ -106,7 +108,7 @@ body{
     position: absolute;
     left: 0;
     top: 0;
-    width: .2rem;
+    width:0.3rem;
     height: 100%;
     font-size: 0;
     background-color: #de3d96;
@@ -115,11 +117,11 @@ body{
     content: "";
     display: block;
     position: absolute;
-    left: 38%;
+    left: 35%;
     top: 0;
     width: 50%;
     margin-left: -.73333rem;
-    height: .03rem;
+    height: .1rem;
     background: #e3e5e7;
 }
 .content-xiangqing{
@@ -142,17 +144,19 @@ body{
     border-bottom: #d8d8d8 1px solid
 }
 .xiangqing>div{
-    height:6rem;
-    width: 4rem;
+    /* height:6rem; */
+    width: 25%;
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
+    text-align: center;
 }
 .xiangqing>div img{
     height: 75%;
-
+    width: 90%;
+    left: 20%;
 }
 .ta-center{
     text-align: center;
@@ -162,25 +166,26 @@ body{
 }
 
 /* 品牌界面 */
-
+.pinpai{
+    display: block;
+}
 .scrollBar{
     width:100%;
     overflow: hidden;
-    height: 4.5rem;
+    height: 7rem;
     background: white;
 }
-
 .scrollBarItem{
-    width: 40rem;
-    height:4rem;
+    width: 60rem;
+    height:100%;
     border-bottom: #d8d8d8 1px solid;
 }
 .scrollBarItem ul{
-    height:4rem;
+    height:100%;
     color: #585c64;
 }
 .scrollBarItem ul li{
-    height: 3rem;
+    height:100%;
     margin: 0 0.8em;
     float: left;
     line-height: 36px; 
@@ -189,7 +194,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 1rem 0 0.5rem 0;
+    padding: 1rem 0 0rem 0;
     font-size: 12px;
 }
 .scrollBarItem ul li:hover{
@@ -207,7 +212,7 @@ body{
 /* 下面箱包部分 */
 .pp-pro{
     width: 100%;
-    padding: 0 1rem;
+    padding: 0 1rem 1rem 1rem ;
     box-sizing: border-box;
     background: white;
 }
@@ -218,6 +223,7 @@ body{
     color: #222222;
     font-weight: 400;
     padding: 1rem;
+    margin: 0;
 }
 .pp-pro>h3>a{
     text-decoration: none;
