--- a/third-stage/public/stylesheets/index/womenclothes.css
+++ b/third-stage/public/stylesheets/index/womenclothes.css
@@ -22,10 +22,10 @@
     overflow:hidden;
     margin:0.8rem 0;
 }
-.opennew-top{
-    /* height:18.5rem; */
+/* .opennew-top{
+    height:18.5rem;
     background:red
-}
+} */
 .opennew-bottom{
     display:flex;
     justify-content:space-between;
