导航栏添加右边分类的js

--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -179,6 +179,7 @@ a{
         <a href="/login"><span class="login">登录</span></a>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list"><img src="/images/index/list1.png"></span>
+
     </div>
     <!-- 搜索下方导航栏 -->
     <div class="clear nav1">
@@ -299,6 +300,11 @@ a{
      var myScroll1 = new IScroll('.scrollBar',{
             scrollX: true
         })
+        // 搜索框右边的列表
+        var list=document.querySelector('.list')
+        list.onclick=function(){
+            location.href='/shop/index/classify'
+        }
 
         // 下拉列表的js
         var angledown=document.querySelector('#angledown')
