--- a/third-stage/views/shoppingcar.ejs
+++ b/third-stage/views/shoppingcar.ejs
@@ -1,5 +1,12 @@
 <% include base/head.ejs%>
-    <div>
+<style>
+    .shoppingcar-top{
+        width:100%;
+        height:10rem;
+        background:#FBFBFA
+}
+</style>
+    <div class="shoppingcar-top">
         <i class="fa fa-angle-left"></i>
         购物车
     </div>
