--- a/third-stage/views/base/head.ejs
+++ b/third-stage/views/base/head.ejs
@@ -20,12 +20,13 @@
             padding: 0;
             margin: 0;
           }
-          body{
+          html{
             font-size:10px;
-            padding: 0;
             /* background:#ccc */
           }
-         
+          body{
+            padding: 0;
+          }
           li{
             list-style:none
           }
