--- a/third-stage/views/classify.ejs
+++ b/third-stage/views/classify.ejs
@@ -11,7 +11,7 @@
         <div class="fa fa-home backindex"></div>
     </div>
     <!-- 搜索界面 -->
-    <div class="search clear">
+    <div class="search ">
         <button>
             <span  class="fa fa-search"></span>
             <span>搜索品牌或商品</span>
@@ -19,58 +19,81 @@
     </div>
     <!-- 分类界面 -->
     <div class="content">
-        <ul class="content-list">
-            <li>为你推荐</li>
-            <li>女装</li>
-            <li>男装</li>
-            <li>男女内衣</li>
-            <li>女鞋</li>
-            <li>男鞋</li>
-            <li>箱包皮具</li>
-            <li>手表配饰</li>
-            <li>护肤彩妆</li>
-            <li>个人护理</li>
-            <li>母婴</li>
-            <li>运动户外</li>
-            <li>手机数码</li>
-            <li>家用电器</li>
-            <li>家居家纺</li>
-            <li>生活超市</li>
-            <li>唯品国际</li>
-            <li>唯品.奢</li>
-            <li>唯品金融</li>
-            <li>医药健康</li>
-            <li>图书文娱</li>
-        </ul>
-        <div class="content-xiangqing">
-            <h2>好物推荐</h2><br>
-            <div class="xiangqing">
-                <div>
-                    <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
-                    <p class="ta-center fs12">连衣裙</p>
+        <div class="contentl ">
+            <ul class="content-list">
+                    <li>为你推荐</li>
+                    <li>女装</li>
+                    <li>男装</li>
+                    <li>男女内衣</li>
+                    <li>女鞋</li>
+                    <li>男鞋</li>
+                    <li>箱包皮具</li>
+                    <li>手表配饰</li>
+                    <li>护肤彩妆</li>
+                    <li>个人护理</li>
+                    <li>母婴</li>
+                    <li>运动户外</li>
+                    <li>手机数码</li>
+                    <li>家用电器</li>
+                    <li>家居家纺</li>
+                    <li>生活超市</li>
+                    <li>唯品国际</li>
+                    <li>唯品.奢</li>
+                    <li>唯品金融</li>
+                    <li>医药健康</li>
+                    <li>图书文娱</li>
+            </ul>
+        </div>
+        <div class="contentr">
+            <div class="content-xiangqing">
+                <h2>好物推荐</h2><br>
+                <div class="xiangqing">
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                        <p class="ta-center fs12">连衣裙</p>
+                    </div>
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                        <p class="ta-center fs12">女鞋</p>
+                    </div>
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                        <p class="ta-center fs12">女式卫衣</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
-                    <p class="ta-center fs12">女鞋</p>
-                </div>
-                <div>
-                    <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
-                    <p class="ta-center fs12">女式卫衣</p>
+                <h2>品质精选</h2><br>
+                <div class="xiangqing">
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                        <p class="ta-center fs12">连衣裙</p>
+                    </div>
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                        <p class="ta-center fs12">女鞋</p>
+                    </div>
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                        <p class="ta-center fs12">女式卫衣</p>
+                    </div>
                 </div>
             </div>
-            <h2>品质精选</h2><br>
-            <div class="xiangqing">
-                <div>
-                    <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
-                    <p class="ta-center fs12">连衣裙</p>
-                </div>
-                <div>
-                    <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
-                    <p class="ta-center fs12">女鞋</p>
-                </div>
-                <div>
-                    <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
-                    <p class="ta-center fs12">女式卫衣</p>
+        </div>
+        <div class="contentr">
+            <div class="content-xiangqing">
+                <h2>好物推荐</h2><br>
+                <div class="xiangqing">
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                        <p class="ta-center fs12">连衣裙</p>
+                    </div>
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                        <p class="ta-center fs12">女鞋</p>
+                    </div>
+                    <div>
+                        <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                        <p class="ta-center fs12">女式卫衣</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -118,10 +141,50 @@
                 <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
                 <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
             </div>
+            <div class="pp-img">
+                    <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                    <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                    <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                    <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                    <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                    <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                </div>
+                <div class="pp-img">
+                        <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                        <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                        <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                        <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                        <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                        <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                    </div>
+                    <div class="pp-img">
+                            <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                            <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                            <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                            <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                            <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                            <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                        </div>
+                        <div class="pp-img">
+                                <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                                <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                                <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                                <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                                <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                                <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                            </div>
+                            <div class="pp-img">
+                                    <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                                    <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                                    <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                                    <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                                    <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                                    <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                                </div>
         </div>
-
     </div>
-
+    <!-- 回到顶部 -->
+    <div id="back"><i class="fa fa-angle-up" style="font-size:27px;color:#fff;"></i></div>
 
 
     <script src="js/iscroll.js"></script>
@@ -131,6 +194,13 @@
         var myScroll = new IScroll('.scrollBar',{
             // mouseWheel:true,
             // scrollbars:true,
+            scrollX:true
+        });
+        //导航栏不动，li移动
+        var contentl= new IScroll('.contentl',{
+            scrollX:true
+        });
+        var contentr = new IScroll('.contentr',{
             scrollX:true
         });
 
@@ -144,8 +214,8 @@
         // 切换
         var fenlei = document.querySelector('.tc1')
         var pinpai = document.querySelector('.tc2')
-        var fenleiview = document.querySelector('.content')
         var pinpaiview = document.querySelector('.pinpai')
+        var fenleiview = document.querySelector('.content')
         fenlei.onclick = function(){
             fenleiview.style.display = 'block'
             pinpaiview.style.display = 'none'
@@ -155,6 +225,19 @@
             fenleiview.style.display = 'none'
         }
 
+         //    一键回顶部
+         var back=document.querySelector('#back')
+        window.onscroll=function(){
+            if(window.scrollY>1000){
+                back.style.display='block'
+            }else{
+                back.style.display='none'
+            }
+        }
+        back.onclick=function(e){
+            window.scrollTo(0,0)
+        }
+        
     </script>
     
 <% include base/foot.ejs%>
