--- a/third-stage/public/stylesheets/lastcrazy/classify.css
+++ b/third-stage/public/stylesheets/lastcrazy/classify.css
@@ -47,13 +47,17 @@ body{
 .tc1{
     border-radius: 0.5rem 0 0 0.5rem;
 }
+#tc1{
+    background: #585c64;
+    color: white;
+}
 .bg-gray{
     background: #585c64;    
 }
 .tc2{
     border-radius: 0 0.5rem  0.5rem  0rem;
 }
-.top-content div:hover{
+.tc:hover{
     border: 1px solid #585c64;
     background: #585c64;
     box-sizing: border-box;
@@ -86,7 +90,6 @@ body{
     width: 100%;
     height: 57rem;
     box-sizing: border-box;
-    /* display: block; */
     overflow: hidden;
     position: relative;
 }
@@ -102,7 +105,7 @@ body{
     /* height: 85rem; */
     box-sizing: border-box;
     float: left;
-    position: absolute;
+    position: absolute;s
 }
 .content-list>li{
     text-align: center;
@@ -115,6 +118,24 @@ body{
     background: white;
     color: #222222;
 }
+#tuijian{
+    background: white;
+    color: #222222;
+}
+#tuijian::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width:0.3rem;
+    height: 100%;
+    font-size: 0;
+    background-color: #de3d96;
+}
+#tuijian:hover::after{
+    left: 0%;
+}
+
 .content-list>li:hover::after{
     content: "";
     position: absolute;
@@ -142,8 +163,16 @@ body{
     height: 57rem;
     width: 75%;
     background: white;
-    /* overflow: hidden; */
+    overflow: hidden;
     float: right;
+}
+.contentr1{
+    height: 57rem;
+    width: 75%;
+    background: white;
+    overflow: hidden;
+    float: right;
+    display:none;
 }
 .content-xiangqing{
     background: white;
@@ -184,9 +213,9 @@ body{
 }
 
 /* 品牌界面 */
-/* .pinpai{
+.pinpai{
     display: none;
-} */
+}
 .scrollBar{
     width:100%;
     overflow: hidden;
