提交生活界面

--- a/third-stage/views/life.ejs
+++ b/third-stage/views/life.ejs
@@ -87,6 +87,61 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
+ <!-- <唯品快枪> -->
+       <!-- <div class="fastbuy">
+           <div class="fastbuy-top">
+               <p class="fastbuy-desc1"><span style="color:#de3e97">唯品快抢 生活 </span></p>
+               <div class="meiri"> 
+                   <img src="/images/life/mwiri.png" alt="">
+                </div>
+           </div>
+           <div class="fastbuy-bottom">
+               <div class="fastbuy-bottom1">
+                   <div class="fastbuy-bottom1-desc">
+                       <img width="100%" src="/images/life/3.jpg" alt="">
+                   </div>
+                   <div>
+                        <img class="xiaotu" width="50%" src="/images/life/bio.png" alt="">
+                   </div>
+                   <div class="kuai"><span>快抢价</span><span style="color:red;font:size 15px">￥66</span></div>
+               </div>
+               <div class="fastbuy-bottom1">
+                   <div class="fastbuy-bottom1-desc">
+                       <img width="100%" src="/images/life/2.jpg" alt="">
+                   </div>
+                   <div>
+                       <img class="xiaotu" width="50%" src="/images/life/sw.png" alt="">
+                   </div>
+                   <div class="kuai"><span>快抢价</span><span style="color:red;font:size 15px">￥99</span></div>
+               </div>
+               <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/life/3.jpg" alt="">
+                </div>
+                <div>
+                    <img class="xiaotu" width="50%" src="/images/life/bio.png" alt="">
+                </div>
+                <div class="kuai"><span>快抢价</span> <span style="color:red;font:size 15px">￥79</span></div>
+               </div>
+               <div class="fastbuy-bottom1">
+                <div class="fastbuy-bottom1-desc">
+                    <img width="100%" src="/images/life/2.jpg" alt="">
+                </div>
+                <div>
+                    <img class="xiaotu" width="50%" src="/images/life/sw.png" alt="">
+                </div>
+               <div class="kuai"><span>快抢价</span><span style="color:red;font:size 15px">￥79</span></div>
+            </div>
+           </div>
+       </div> -->
+
        <div>
             <img width="100%" src="/images/life/jingcai.jpg" alt="">
       </div>
@@ -143,7 +198,7 @@
 </script>
 
 
-    <% include base/bottom.ejs%>
+
 <% include base/foot.ejs%>
 
 
