--- a/third-stage/views/base/navvipcostly.ejs
+++ b/third-stage/views/base/navvipcostly.ejs
@@ -185,15 +185,15 @@
             <div class="scrollBar fl">
                 <div class="scrollBarItem">
                     <ul>
-                        <li ><a href="/shop/index" >今日推荐</a></li>
+                        <li><a href="/shop/index">今日推荐</a></li>
                         <li ><a href="/shop/lastcrazy">最后疯抢</a></li>
-                        <li ><a href="/shop/newbeauty">美妆</a></li>
-                        <li ><a href="/shop/baby">母婴</a></li>
-                        <li ><a href="/shop/international">国际</a></li>
+                        <li ><a href="">美妆</a></li>
+                        <li ><a href="">母婴</a></li>
+                        <li ><a href="">国际</a></li>
                         <li ><a href="/shop/homeapp">家电</a></li>
-                        <li ><a href="/shop/furniture">家居</a></li>
-                        <li ><a href="/shop/life" >生活</a></li>
-                        <li id="active"><a href="/shop/vipcostly" class="color">唯品奢</a></li>
+                        <li ><a href="">家居</a></li>
+                        <li><a href="/shop/life">生活</a></li>
+                        <li   id="active"><a href="/shop/vipcostly"  class="color">唯品奢</a></li>
                     </ul>
                 </div>
             </div>
@@ -299,12 +299,7 @@
          var myScroll1 = new IScroll('.scrollBar',{
                 scrollX: true
             })
-            // 搜索框右边的列表
-            var list=document.querySelector('.list')
-                list.onclick=function(){
-                    location.href='/shop/index/classify'
-            }
-
+    
             // 下拉列表的js
             var angledown=document.querySelector('#angledown')
             var angleup=document.querySelector('#angleup')
