--- a/third-stage/views/classify.ejs
+++ b/third-stage/views/classify.ejs
@@ -109,7 +109,7 @@
         <div class="scrollBar ">
             <ul class="scrollBarItem">
                 <ul>
-                    <li> <span class="fa fa-star-o"></span> 猜你喜欢</li>
+                    <li id="navlike"> <span class="fa fa-star-o"></span> 猜你喜欢</li>
                     <li> <span class="fa fa-female"></span>推荐</li>
                     <li> <span class="fa fa-black-tie"></span> 男装</li>
                     <li><span class="fa fa-gift"></span> 美妆</li>
@@ -140,6 +140,29 @@
             </h3>
             <div class="pp-img">
                 <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (6).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (5).jpg" alt="">
+                <img src="/images/lastcrazy/fenlei1 (6).jpg" alt=""><img src="/images/lastcrazy/fenlei1 (1).jpg" alt="">
                 <img src="/images/lastcrazy/fenlei1 (2).jpg" alt="">
                 <img src="/images/lastcrazy/fenlei1 (3).jpg" alt="">
                 <img src="/images/lastcrazy/fenlei1 (4).jpg" alt="">
@@ -188,17 +211,20 @@
             pinpaiview.style.display = 'none'
             fenlei.style.background = '#585c64'
             fenlei.style.color = 'white'
+            pinpai.style.background = 'none'
+            pinpai.style.color = '#585c64'
         }
         pinpai.onclick = function(){
             pinpaiview.style.display = 'block'
             fenleiview.style.display = 'none'
             fenlei.style.background = 'none'
             fenlei.style.color = '#585c64'
+            pinpai.style.background = '#585c64'
+            pinpai.style.color = 'white'
         }
 
         // li女装等切换
         var tuijianmoren = document.querySelector('#tuijian')
-        
         var wntuijian = document.querySelector('.tuijian')
         var womenwear = document.querySelector('.womenwear')
         var tuijian = document.querySelector('.xq-1')
@@ -215,11 +241,16 @@
             tuijianmoren.style.background = 'white'
             tuijianmoren.style.color = '#222222'
         }
+        
+        // nav切换
+        // var navlike = document.querySelector('#navlike')
 
-         //    一键回顶部
-         var back=document.querySelector('#back')
+
+
+         //  一键回顶部
+        var back=document.querySelector('#back')
         window.onscroll=function(){
-            if(window.scrollY>1000){
+            if(window.scrollY>00){
                 back.style.display='block'
             }else{
                 back.style.display='none'
