--- a/third-stage/public/stylesheets/lastcrazy/lastcrazy.css
+++ b/third-stage/public/stylesheets/lastcrazy/lastcrazy.css
@@ -74,6 +74,10 @@
     color: #ec3790;
     border-bottom:#ec3790 solid 2px;   
 }
+#jrfq{
+    color: #ec3790;
+    border-bottom:#ec3790 solid 2px;   
+}
 .nav-text1{
     width: 50%;
     line-height: 4rem;
