--- a/third-stage/views/login_user.ejs
+++ b/third-stage/views/login_user.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/login/login_user.css">
 <style>
 .background{
-    width: 37.5rem;
+    width: 100%;
     height: 19rem;
     background: #f6f6f6 url(../images/login/login_bg.3a93a8bf.jpg) no-repeat 0 0;
     margin: 0 auto;
@@ -19,22 +19,33 @@
 <div  id="div" class="container">
     <form>
         <div id="bottom">
-            <p id="p1">登录名</p><input id="input1" type="text" name="username" placeholder="请输入手机号或邮箱" aria-describedby="sizing-addon1" class="form-control">
+            <p id="p1">手机号</p><input id="input1" type="text" name="username" placeholder="请输入手机号" aria-describedby="sizing-addon1" class="form-control">
         </div>
         <div id="bottom">
-            <p id="p2">密码</p><input id="input2" type="text" name="password" placeholder="请输入密码" aria-describedby="sizing-addon1" class="form-control">
+            <p id="p2">密码</p><input id="input2" type="text" name="password" placeholder="请输入验证码" aria-describedby="sizing-addon1" class="form-control">
         </div>
-        <button id="button" type="submit" class="btn btn-primary btn-lg">登录</button>
+        <!-- <div id="bottom2">
+            <button id="p3">获取验证码</button>
+        </div> -->
+        <button id="button" type="submit" class="btn btn-primary btn-lg">手机号注册登录</button>
     </form>
 </div>
 <div class="password">
-    <span>忘记密码</span>
+    <div class="password1">
+        <input type="checkbox" name="check">
+    </div>
+    <div class="password2">
+        <span class="password-span">同意</span><a href="">《唯品会服务条款》</a>，<a href="">《隐私条款》</a>，<a href="">《唯品支付用户
+            <br>
+            服务协议》</a>
+    </div>
+    
 </div>
 <div class="h">
     <div class="hr1"></div>
     <div class="huo">或</div>
     <div class="hr2"></div>
 </div>
-<div class="zhuce"><a href="/shop/login">手机注册登录</a></div>
+<div class="zhuce"><a href="/shop/login">密码登录</button></a>
 <!-- <script src="/javascripts/ajax/login.js"></script> -->
 <% include base/foot.ejs %>
